tests/NormalTests/paczka1/fuzzy1/44971785.err
Error in line 6: NRB2ErlS2W A597 90,7
Error in line 14: 5nvIvSKC9y5 S202 81,6
Error in line 15: 5nvIvSKC9y5 S552 24,6
Error in line 24: PtJoviPGnNj A597 97,7
Error in line 20: DmAS9nrLA S552 72,2
Error in line 7: NRB2ErlS2W S202 12,1
Error in line 25: PtJoviPGnNj S202 71,4
Error in line 33: PtJoviPGnNj S552 43,7
Error in line 23: 4m4 S552 0,9
